[package]
name = "memoarr"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.7"
html-escape = "0.2"
select = "0.5.0"
chrono-tz = "0.7"